<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_id"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        app:cardCornerRadius="@dimen/cardview_default_radius"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:padding="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/titleView"
                android:textSize="18sp"
                android:textStyle="bold"
                android:gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enter_item_view"/>
            <EditText
                android:id="@+id/itemName"
                android:hint="@string/enter_item"
                android:layout_below="@id/titleView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/itemQty"
                android:hint="@string/item_qty"
                android:inputType="number"
                android:layout_below="@id/itemName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/itemColor"
                android:hint="@string/item_color"
                android:layout_below="@id/itemQty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/itemSize"
                android:hint="@string/item_size"
                android:inputType="number"
                android:layout_below="@id/itemColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/itemSave"
                android:background="@color/colorAccent"
                android:text="@string/item_save"
                android:textSize="16sp"
                android:padding="8dp"
                android:textColor="@android:color/white"
                android:layout_below="@id/itemSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>