<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:padding="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/confirmation_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:text="@string/delete_confirmation"
                />

            <Button
                android:id="@+id/confirm_yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirm_yes"
                android:layout_marginTop="20dp"
                android:layout_marginStart="30dp"
                android:layout_below="@+id/confirmation_text"
                android:textColor="@android:color/white"
                android:background="@color/colorAccent"
                />

            <Button
                android:id="@+id/confirm_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirm_no"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:layout_below="@id/confirmation_text"
                android:layout_alignParentRight="true"
                android:textColor="@android:color/white"
                android:background="@color/colorAccent"
                />

        </RelativeLayout>


    </androidx.cardview.widget.CardView>

</LinearLayout>